tests/ui/const-generics/mgca/tuple_expr_arg_complex.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:15:25
   |
LL |     takes_tuple::<{ (N, N + 1) }>();
   |                         ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:16:25
   |
LL |     takes_tuple::<{ (N, T::ASSOC + 1) }>();
   |                         ^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:18:36
   |
LL |     takes_nested_tuple::<{ (N, (N, N + 1)) }>();
   |                                    ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:21:25
   |
LL |     takes_array::<{ [N, N + 1] }>();
   |                         ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_expr_arg_complex.rs:22:37
   |
LL |     takes_tuple_with_array::<{ ([N, N + 1], N) }>();
   |                                     ^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/tuple_expr_arg_complex.rs:19:44
   |
LL |     takes_nested_tuple::<{ (N, (N, const { N + 1 })) }>();
   |                                            ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 6 previous errors

